--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,30 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<header class="navbar navbar-fixed-top navbar-default">
-		<div class="container">
-			<%= link_to "myRecipes","#", class: "btn btn-lg btn-success", id: "logo" %>
-			<div class="nav_item">
-				<%= link_to "Link 1","#", class: "btn btn-default btn-warning", id: "logo" %>
-			</div>
-			<div class="nav_item">
-				<%= link_to "Link 2","#", class: "btn btn-default btn-warning", id: "logo" %>
-			</div>
-			<div class="nav_item">
-				<%= link_to "Link 3","#", class: "btn btn-default btn-warning", id: "logo" %>
-			</div>
-		</div>
-	</header>
 
-<div class="container">
-<%= yield %>
-</div>
+	<%= render 'layouts/navigation' %>
 
 	<div class="container">
-		<div class="footer">
-			<p>&copy; MyRecipes 2016</p>
-		</div>
+	<%= yield %>
 	</div>
+
+	<%= render 'layouts/footer' %>
+
 
 </body>
 </html>
