--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
 	<%= render 'layouts/navigation' %>
 
 	<div class="container">
-	<%= yield %>
+		<%= render 'layouts/messages' %>
+		<%= yield %>
+
+		<%= render 'layouts/footer' %>
 	</div>
-
-	<%= render 'layouts/footer' %>
-
 
 </body>
 </html>
